--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
   animation: gradient-animation 18s ease infinite;
 }
 
+#responsiveGif {
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
+}
+
 @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
